<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="destinationViewModel"
            type="com.example.carryitemsreminder.destination.DestinationViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/Where_are_you_heading"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShopping"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="160dp"
        android:text="@string/Shopping"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnGym"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnOffice"
        android:onClick="@{() -> destinationViewModel.onShoppingSelected()}"/>

    <Button
        android:id="@+id/btnGym"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="160dp"
        android:textSize="@dimen/button_text_size"
        android:text="@string/Gym"
        app:layout_constraintStart_toEndOf="@id/btnShopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnOffice"
        android:onClick="@{() -> destinationViewModel.onGymSelected()}" />

    <Button
        android:id="@+id/btnOffice"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:textSize="@dimen/button_text_size"
        android:layout_marginTop="10dp"
        android:text="@string/Office"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toStartOf="@id/btnOuting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShopping"
        app:layout_constraintBottom_toTopOf="@id/btnSports"
        android:onClick="@{() -> destinationViewModel.onOfficeSelected()}"/>

    <Button
        android:id="@+id/btnOuting"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:text="@string/Outing"
        android:textSize="@dimen/button_text_size"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnOffice"
        app:layout_constraintTop_toBottomOf="@+id/btnShopping"
        app:layout_constraintBottom_toTopOf="@id/btnSwimming"
        android:onClick="@{() -> destinationViewModel.onOutingSelected()}"/>

    <Button
        android:id="@+id/btnSports"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:text="@string/Sports"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@id/btnSwimming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOffice"
        android:onClick="@{() -> destinationViewModel.onSportsSelected()}"/>

    <Button
        android:id="@+id/btnSwimming"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:text="@string/Swimming"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSports"
        app:layout_constraintTop_toBottomOf="@+id/btnOuting"
        android:onClick="@{() -> destinationViewModel.onSwimmingSelected()}"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>