<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="carryitemsViewModel"
            type="com.example.carryitemsreminder.carryitemslist.CarryItemsViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvItemsList"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@+id/etEnterItem"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

<EditText
    android:id="@+id/etEnterItem"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/Enter_Item"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btnAddItem"
    app:layout_constraintStart_toStartOf="parent"/>

<Button
    android:id="@+id/btnAddItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Add_Item"
    android:onClick="@{ ()-> carryitemsViewModel.onAddItemClicked()}"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btnDeleteItem" />

<Button
    android:id="@+id/btnDeleteItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Delete_Item"
    android:onClick="@{ ()-> carryitemsViewModel.onDeleteItemClicked()}"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>